// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Renders afspraak data > Compact variant 1`] = `
<DocumentFragment>
  <article
    class="_AfspraakCard_0a51e6"
  >
    <span
      class="ams-icon ams-icon--heading-2 _Icon_0a51e6"
      hidden=""
    >
      <svg
        aria-hidden="true"
        focusable="false"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M23 13h-4v1h4v2h-1.5v4h-2v-4h-15v4h-2v-4H1v-2h1.72l.593-2.374a2 2 0 0 1 1.94-1.515h4.662a2 2 0 0 1 1.94 1.515L12.448 14H17v-1h-4V6h10zM4.782 14h5.605l-.472-1.889H5.254zM15 11h2v-1h2v1h2V8h-6z"
          fill-rule="evenodd"
        />
        <path
          clip-rule="evenodd"
          d="M7.857 4.014a2.67 2.67 0 0 1 2.394 2.653l-.014.272a2.667 2.667 0 0 1-2.652 2.394l-.273-.014a2.67 2.67 0 0 1-2.38-2.38l-.014-.272A2.667 2.667 0 0 1 7.585 4zM7.585 6a.667.667 0 1 0 0 1.334.667.667 0 0 0 0-1.334"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <h3
      class="ams-heading ams-heading--3"
    >
      Varen
    </h3>
    <p
      class="ams-paragraph"
    >
      <time
        datetime="2020-01-17T17:50:00Z"
      >
        Datum, maandag 01 januari 2025 van 17:50 tot 18:20
      </time>
      <br />
      Locatie Stadsloket Centrum, Amstel 1
      <br />
      <a
        class="ams-link _MaLink_10c0a4"
        href="/qr/123"
      >
        Bekijk afspraak
      </a>
    </p>
  </article>
</DocumentFragment>
`;

exports[`Renders afspraak data > Regular variant 1`] = `
<DocumentFragment>
  <article
    class="_AfspraakCard_0a51e6"
  >
    <span
      class="ams-icon ams-icon--heading-2 _Icon_0a51e6"
      hidden=""
    >
      <svg
        aria-hidden="true"
        focusable="false"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M23 13h-4v1h4v2h-1.5v4h-2v-4h-15v4h-2v-4H1v-2h1.72l.593-2.374a2 2 0 0 1 1.94-1.515h4.662a2 2 0 0 1 1.94 1.515L12.448 14H17v-1h-4V6h10zM4.782 14h5.605l-.472-1.889H5.254zM15 11h2v-1h2v1h2V8h-6z"
          fill-rule="evenodd"
        />
        <path
          clip-rule="evenodd"
          d="M7.857 4.014a2.67 2.67 0 0 1 2.394 2.653l-.014.272a2.667 2.667 0 0 1-2.652 2.394l-.273-.014a2.67 2.67 0 0 1-2.38-2.38l-.014-.272A2.667 2.667 0 0 1 7.585 4zM7.585 6a.667.667 0 1 0 0 1.334.667.667 0 0 0 0-1.334"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <h3
      class="ams-heading ams-heading--3"
    >
      Varen
    </h3>
    <p
      class="ams-paragraph"
    >
      <time
        datetime="2020-01-17T17:50:00Z"
      >
        Datum, maandag 01 januari 2025 van 17:50 tot 18:20
      </time>
    </p>
    <button
      class="ams-link _InlineButton_10c0a4 _LocationModalLink_fa327b _LocationLink_0a51e6"
      type="button"
    >
      Locatie, Stadsloket Centrum, Amstel 1
    </button>
    <br />
    <a
      class="ams-link _ICSLink_0a51e6 ams-mb-m"
      download="afspraak-unique-123.ics"
      href="data:text/calendar;base64,abc123"
      rel="noopener noreferrer"
    >
      Voeg toe aan agenda
    </a>
    <br />
    <span
      class="_CancellationLinkContainer_0a51e6"
    >
      <a
        class="ams-link _CancellationLink_0a51e6 ams-mb-m"
        href="https://cancel.com"
        rel="noopener noreferrer"
      >
        Annuleren
      </a>
      <br />
    </span>
    <button
      class="ams-button ams-button--secondary"
      type="button"
    >
      Toon QR code
    </button>
  </article>
</DocumentFragment>
`;
